[tool.poetry]
name = "repopacker"
version = "0.1.0" # remember to change in constants.py
description = ""
authors = ["Kevin Course <kevin.course@mail.utoronto.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
repopacker = 'repopacker.main:main' 

[build]
script = "poetry run python -m repopacker"
